add send route, and validate phone in user model
